# linux-collection-agent

./: .gitignore  Makefile  README.md  install-requirements.sh  pyproject.toml  send_dump.py  system-state-dump.sh
linux_collection_agent/: register_cron_job.py  send_dump.py
